test/mutation_analysis/s0008_string_to_integer_atoi/hafis/ablation_o3_r50/mutants/47/result.txt
./test/mutation_analysis/s0008_string_to_integer_atoi/hafis/ablation_o3_r50/mutants/47/Solution.java:38: error: unreachable statement
        while (false) {
                      ^
1 error
